# helixsh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tauri-build.yml
docs/: index.html
scripts/: install_desktop.sh  package_local.sh  package_ui.sh  uninstall_desktop.sh
src/helixsh/: __init__.py  __main__.py  arbitration.py  bioconda.py  cache.py  calibration.py  claude_cli.py  cli.py  cloud_cost.py  compliance.py  container_policy.py  context.py  diagnostics.py  doctor.py  executor.py  (+27 more)
tests/: test_bioconda.py  test_cache.py  test_calibration.py  test_claude_cli.py  test_cli.py  test_cli_audit.py  test_cli_authorization.py  test_cli_claude_calibrated.py  test_cli_context.py  test_cli_enterprise.py  test_cli_errors.py  test_cli_extended.py  test_cli_gateway_resources.py  test_cli_masterplan.py  test_cli_offline.py  test_cli_phase4.py  test_cli_posix.py  test_cli_preflight.py  test_cli_roadmap.py  test_cli_roadmap_status.py  test_cli_runtime_fit.py  test_cli_signing.py  test_command_sanity.py  test_container_policy.py  test_context.py  test_diagnostics.py  test_doctor.py  test_empirical.py  test_executor.py  test_features.py  test_gateway.py  test_intent.py  test_main_module.py  test_masterplan_features.py  test_mcp.py  test_mcp_runtime.py  test_nextflow.py  test_offline.py  test_profiles.py  test_provenance.py  (+9 more)
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  lib.rs  main.rs
(+9 files in other folders)
