[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helixsh"
dynamic = ["version"]
description = "Bioinformatics-first AI shell wrapper for Nextflow and nf-core"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "helixsh contributors" }
]
dependencies = []

[project.scripts]
helixsh = "helixsh.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "helixsh.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
